@@ -1,5 +1,6 @@
 package com.sloway.app.place.service.office;
 
+import com.sloway.app.aws.service.S3Service;
 import com.sloway.app.place.dto.request.office.OfficeUpdateReqDto;
 import com.sloway.app.place.dto.request.office.OfficeReqDto;
 import com.sloway.app.place.dto.request.sort.ImgSortReqDto;
@@ -28,6 +29,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
+import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Objects;
@@ -46,49 +48,38 @@ public class OfficeService {
     private final ImgOfficeRepository imgOfficeRepository;
     private final HostPlaceService hostPlaceService;
     private final HostPlaceRepository hostPlaceRepository;
+    private final S3Service s3Service;
 
-    //저장
     @Transactional
     public void saveOffice(OfficeReqDto dto, List<MultipartFile> files, List<ImgSortReqDto> sortList, Long memberNo) {
-        //부모 테이블 엔티티 조회
+        // 1. 부모 엔티티 및 편의시설 조회
         PlaceEntity place = placeRepository.findByNo(dto.getPlaceNo())
-                .orElseThrow(() -> new EntityNotFoundException("[OFFICE-210] Place Not Found For Save Office"));
+                .orElseThrow(() -> new EntityNotFoundException("[OFFICE-210] Place Not Found"));
 
-        //편의시설 정보 조회
-        List<Long> amenityNos = dto.getFacilityList().stream()
-                .map(facility -> facility.getAmenityNo())
-                .collect(Collectors.toList());
-        List<AmenityEntity> amenityEntities = amenityRepository.findAllByNoIn(amenityNos);
+        List<AmenityEntity> amenityEntities = amenityRepository.findAllByNoIn(
+                dto.getFacilityList().stream().map(f -> f.getAmenityNo()).toList());
 
-        //Office 저장을 위한 헨티티 변환
-        OfficeEntity entity = dto.toEntity(place, amenityEntities);
-
-        //Office 저장
-        OfficeEntity office = officeRepository.save(entity);
-
-        //검수 등록
+        // 2. Office 저장 및 검수 등록
+        OfficeEntity office = officeRepository.save(dto.toEntity(place, amenityEntities));
         hostPlaceService.insertHostPlace("C", memberNo, office.getNo());
 
-        //이미지 aws로 수정
-        List<String> dummyUrls = files.stream()
-                .map(img -> "https://temp-bucket.s3.amazonaws.com/temp_"
-                        + System.currentTimeMillis() + "_"
-                        + img.getOriginalFilename())
-                .toList();
+        // 3. 이미지 S3 업로드 및 저장
+        if (files != null && !files.isEmpty()) {
+            List<ImgOfficeEntity> imgEntities = IntStream.range(0, files.size())
+                    .mapToObj(i -> {
+                        try {
+                            // S3 업로드 (풀 URL 반환)
+                            String s3Url = s3Service.upload(files.get(i), "office");
+                            int sortValue = sortList.get(i).getSort();
+                            return ImgOfficeEntity.from(office, s3Url, sortValue);
+                        } catch (IOException e) {
+                            throw new RuntimeException("Office 이미지 업로드 실패", e);
+                        }
+                    })
+                    .collect(Collectors.toList());
 
-        int size = Math.min(dummyUrls.size(), sortList.size());
-        List<ImgOfficeEntity> imgEntities = IntStream.range(0, size)
-
-                .mapToObj(i -> {
-                    String url = dummyUrls.get(i);
-                    int sortValue = sortList.get(i).getSort(); // 정렬 값 추출
-
-                    return ImgOfficeEntity.from(office, url, sortValue);
-                })
-                .collect(Collectors.toList());
-
-        // 이미지 저장
-        imgOfficeRepository.saveAll(imgEntities);
+            imgOfficeRepository.saveAll(imgEntities);
+        }
     }
 
     @Transactional
@@ -162,51 +153,48 @@ public class OfficeService {
 
     @Transactional
     public void updateOfficeImg(Long no, List<MultipartFile> files, List<ImgUpdateSortReqDto> sortList, Long memberNo) {
-        // Station 조회
+        // 1. Office 조회 및 검수 처리
         OfficeEntity officeEntity = officeRepository.findById(no)
-                .orElseThrow(() -> new EntityNotFoundException("[OFFICE-305] Office Not Found For Update Images"));
+                .orElseThrow(() -> new EntityNotFoundException("[OFFICE-305] Office Not Found"));
 
-        // 검수 추가
-        HostPlaceEntity hostPlaceEntity =hostPlaceRepository.findHostOfficeLatest(no, memberNo);
-
-        if(hostPlaceEntity != null){
+        HostPlaceEntity hostPlaceEntity = hostPlaceRepository.findHostOfficeLatest(no, memberNo);
+        if (hostPlaceEntity != null) {
             hostPlaceRepository.delete(hostPlaceEntity);
         }
-
         hostPlaceService.insertHostPlace("C", memberNo, officeEntity.getNo());
 
-        // 2. 화면에 살아남은 기존 이미지 ID 추출 (새로 추가된 파일인 null은 제외)
+        // 2. 화면에 살아남은 이미지 ID 추출
         List<Long> aliveImageNos = sortList.stream()
-                .map(ImgUpdateSortReqDto::getImageNo) // 💡 DTO에 추가된 imageNo 추출
+                .map(ImgUpdateSortReqDto::getImageNo)
                 .filter(Objects::nonNull)
                 .toList();
 
-        // 3. 화면에서 유저가 🗑️ 버튼을 눌러 지워진 이미지들만 DB에서 선택 삭제
-        // (※ Repository에 해당 Querydsl 또는 JPQL 메서드가 선언되어 있어야 합니다)
+        // 3. 삭제될 이미지들 S3에서 실제 파일 삭제 (DB 삭제 전 수행)
+        List<ImgOfficeEntity> toDeleteImages = imgOfficeRepository.findByOfficeEntityNoAndNoNotIn(no, aliveImageNos);
+        toDeleteImages.forEach(img -> s3Service.delete(img.getCurrentUrl()));
+
+        // 4. DB에서 삭제
         if (aliveImageNos.isEmpty()) {
             imgOfficeRepository.deleteAllByOfficeEntityNo(no);
         } else {
             imgOfficeRepository.deleteByOfficeEntityNoAndNoNotIn(no, aliveImageNos);
         }
 
-        // 4. 루프를 돌며 순서 교정(Dirty Check) 및 신규 파일 매칭 삽입(Loop Counter 방식)
+        // 5. 순서 교정 및 신규 파일 매칭 삽입
         int fileIndex = 0;
         for (ImgUpdateSortReqDto dto : sortList) {
             if (dto.getImageNo() != null) {
-                // ① 기존 이미지: 삭제되지 않고 화면에 남아있으므로 순서(sort)만 변경
-                ImgOfficeEntity existingImg = imgOfficeRepository.findById(dto.getImageNo())
-                        .orElseThrow(() -> new EntityNotFoundException("Station Image Not Found"));
-                existingImg.updateSort(dto.getSort());
-            } else {
-                // ② 신규 이미지: 드래그 앤 드롭으로 섞인 null 자리에 순서대로 파일을 매칭하여 S3 URL 발급 후 저장
-                if (files != null && fileIndex < files.size()) {
-                    MultipartFile currentFile = files.get(fileIndex++);
-                    String s3Url = "https://temp-bucket.s3.amazonaws.com/temp_"
-                            + System.currentTimeMillis() + "_"
-                            + currentFile.getOriginalFilename();
-
+                // 기존 이미지: 순서 변경
+                imgOfficeRepository.findById(dto.getImageNo())
+                        .ifPresent(img -> img.updateSort(dto.getSort()));
+            } else if (files != null && fileIndex < files.size()) {
+                // 신규 이미지: S3 업로드 후 저장
+                try {
+                    String s3Url = s3Service.upload(files.get(fileIndex++), "office");
                     ImgOfficeEntity newImg = ImgOfficeEntity.from(officeEntity, s3Url, dto.getSort());
                     imgOfficeRepository.save(newImg);
+                } catch (IOException e) {
+                    throw new RuntimeException("Office 이미지 업로드 중 오류 발생", e);
                 }
             }
         }
